<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/first_recyclerView"
        style="@style/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_first_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/second_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_second_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_recyclerView"/>

    <Button
        android:id="@+id/third_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_third_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_recyclerView"/>

    <Button
        android:id="@+id/fourth_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fourth_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_recyclerView"/>

    <Button
        android:id="@+id/fifth_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fifth_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_recyclerView"/>

    <Button
        android:id="@+id/sixth_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sixth_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth_recyclerView"/>

</androidx.constraintlayout.widget.ConstraintLayout>